added fps counter

--- a/GameClient/style/main.css
+++ b/GameClient/style/main.css
@@ -68,3 +68,10 @@ html {
     touch-action: none;
 }
 
+#fpsLabel {
+    position: absolute;
+    right: 8px;
+    top: 8px;
+    font: 2rem Consolas;
+    color: #f1c40f;
+}
