--- a/GameClient/style/main.css
+++ b/GameClient/style/main.css
@@ -1,10 +1,7 @@
-* {
-    box-sizing: border-box;
-}
-
 body, html {
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -72,6 +69,14 @@ html {
     position: absolute;
     right: 8px;
     top: 8px;
+    font: 2rem Consolas;
+    color: #f1c40f;
+}
+
+#pingLabel {
+    position: absolute;
+    right: 8px;
+    top: calc(8px + 2rem);
     font: 2rem Consolas;
     color: #f1c40f;
 }
