--- a/GameClient/style/main.css
+++ b/GameClient/style/main.css
@@ -47,6 +47,18 @@ html {
     word-break: break-all;
     opacity: .4;
 }
+#fullscreenToggle {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    width: 2rem;
+    font-size: 2rem;
+    text-align: center;
+    background: rgba(51, 51, 51, 30);
+    border-radius: 4px;
+    display: inline-block;
+    color: #eee;
+}
 
 #output .WARN .logLevelName {
     color: #f1c40f;
