--- a/GameClient/style/main.css
+++ b/GameClient/style/main.css
@@ -12,20 +12,17 @@ html {
     font-size: 62.5%;
 }
 
-::-webkit-scrollbar-track
-{
-	background-color: rgba(255, 255, 255, 0.1);
+::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
-::-webkit-scrollbar
-{
-	width: 6px;
+::-webkit-scrollbar {
+    width: 6px;
 }
 
-::-webkit-scrollbar-thumb
-{
-	border-radius: 3px;
-	background-color: #aaaaaa;
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background-color: #aaaaaa;
 }
 
 /* Box styling */
@@ -33,13 +30,12 @@ html {
 #output {
     background: #414141;
     color: white;
-    margin: 10px;
+    margin: 0;
     padding: 10px;
     border-radius: 3px;
-
     position: absolute;
-    bottom: 10px;
-    left: 10px;
+    bottom: 0;
+    left: 0;
     height: 200px;
     width: 50%;
     overflow-y: scroll;
@@ -47,17 +43,25 @@ html {
     word-break: break-all;
     opacity: .4;
 }
+
 #fullscreenToggle {
     position: absolute;
     bottom: 1rem;
     right: 1rem;
-    width: 2rem;
-    font-size: 2rem;
-    text-align: center;
     background: rgba(51, 51, 51, 30);
     border-radius: 4px;
     display: inline-block;
     color: #eee;
+    cursor: pointer;
+    line-height: 0;
+}
+
+#fullscreenToggle img {
+    width: 2rem;
+    height: 2rem;
+    margin: 0.5rem;
+    filter: invert(100%);
+    opacity: 0.4;
 }
 
 #output .WARN .logLevelName {
