--- a/GameServer/wwwroot/style/main.css
+++ b/GameServer/wwwroot/style/main.css
@@ -62,3 +62,17 @@ body {
 #healthLabel {
     top: calc(8px + 2rem);
 }
+
+.overlay {
+    background-color: rgba(234, 32, 39,0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+}
+
+.hidden {
+    display: none;
+}
