Corrected pdead player interaction

--- a/GameServer/wwwroot/style/main.css
+++ b/GameServer/wwwroot/style/main.css
@@ -76,3 +76,20 @@ body {
 .hidden {
     display: none;
 }
+
+.center {
+    text-align: center;
+
+    width: 300px;
+    height: 100px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -70px 0 0 -170px;
+}
+
+.killText {
+    font-family: Butcherman;
+    font-size: 2em;
+}
