--- a/GameServer/wwwroot/style/main.css
+++ b/GameServer/wwwroot/style/main.css
@@ -67,6 +67,10 @@ body {
     top: calc(8px + 3rem);
 }
 
+#delayValueLabel {
+    top: calc(8px + 5rem);
+}
+
 .overlay {
     background-color: rgba(234, 32, 39,0.5);
     position: absolute;
@@ -100,7 +104,7 @@ body {
 
 /* Sliders */
 
-.slidecontainer {
+.frameDropSliderContainer {
     position: absolute;
     right: 8px;
     width: 100px;
@@ -119,4 +123,11 @@ body {
     width: 15px; 
     height: 15px; 
     cursor: pointer;
+}
+
+.delaySliderContainer {
+    position: absolute;
+    right: 8px;
+    width: 100px;
+    top: calc(8px + 6rem);
 }
