--- a/GameServer/wwwroot/style/main.css
+++ b/GameServer/wwwroot/style/main.css
@@ -71,6 +71,10 @@ body {
     top: calc(8px + 5rem);
 }
 
+#extrapolationValueLabel {
+    top: calc(8px + 7rem);
+}
+
 .overlay {
     background-color: rgba(234, 32, 39,0.5);
     position: absolute;
@@ -130,4 +134,11 @@ body {
     right: 8px;
     width: 100px;
     top: calc(8px + 6rem);
+}
+
+.extrapolationSliderContainer {
+    position: absolute;
+    right: 8px;
+    width: 100px;
+    top: calc(8px + 8rem);
 }
